kuber/dp_p.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: hw37payment
          image: kisuni/hw37payment
          ports:
            - containerPort: 8000
