kuber/ing_p.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /balance/add
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /balance/reserve
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
